fix(medi): Edit prop. top of slider-wrap 🐛

--- a/medi/css/style.css
+++ b/medi/css/style.css
@@ -1474,7 +1474,7 @@ body.locked {
   }
 
   .hero__slider-wrap {
-    top: 5.5px;
+    top: 7px;
     width: 100%;
   }
   
